<resources>
    <string name="app_name">Aadhaar Pe Loan Guide Info App</string>
    <string name="Lets_Start">Let\'s Start</string>
    <string name="Next">Next</string>
    <string name="Lets_Go">Let\'s Go</string>
    <string name="FastEasy">Fast &amp; Easy</string>
    <string name="GetEasy">Get Easy</string>
    <string name="GetInstant">Get Instant</string>
    <string name="LoanAdviser">Loan Adviser</string>
    <string name="LoanEligibility">Loan Eligibility</string>
    <string name="LoanApproval">Loan Approval</string>
    <string name="LoanApply">Apply For Loan</string>
    <string name="LoanFAQs">FAQs</string>
    <string name="LoanStartDec">An Aadhaar card loan is a\ntype of unsecured financing option\nprovided by the banks to its customers</string>
    <string name="LoanGoDec">Money is transferred\nthrough online account to account.\nLoan amount disbursement within 10 minutes</string>
    <string name="LoanStartMainDec">loan approval may take a few days to a few weeks. Once  approve, you\'ll need to sign the loan contract, aadhaar pe loan by Using this app you can get all details about how to get home loan , education loan, business loan gold loan , car loan</string>
    <string name="OptionTitle">Categories</string>
    <string name="Documents_Required">Documents Required</string>
    <string name="LoanFAQsMainDec">Aadhaar Pe Loan Guide is an guide and information android mobile application, where you can get the latest information about all aadhaar card, take loan on aadhaar card, and want to known many it will show you that how to get instantly aadhaar loan this is a great app to get complete guide line reguarding aadhaar loan in this app you will get all detail abut the aadhaar loan</string>
    <string name="LoanTypeMainDec">Loan On Aadhar Card is available instantly. Money is transferred from an online account to an account. The loan amount is given within 5 minutes. Easy verification through Aadhar card. Hand-to-hand loan amount disbursal.\n\nAadhar Loan Guide is an informative mobile application, where you can get the latest information about all aadhar card</string>
    <string name="DocumentRequired">Document Required</string>
    <string name="LoanAadhaar">Loan On Aadhaar</string>
    <string name="LoanType">Loan Type</string>
    <string name="home_loan">Home Loan</string>
    <string name="bussiness_loan">Business Loan</string>
    <string name="mortigage_loan">Mortigage Loan</string>
    <string name="balance_transfer_mortigage_loan">Balance Transfer Mortigage Loan</string>
    <string name="balance_transfer_home_loan">Balance Transfer Home Loan</string>
    <string name="Salaried">Salaried</string>
    <string name="SelfEmployed">Self Employed</string>
    <string name="loanHomeSalaried"><b><font color='#005CEE' size="16">☞ PERSONAL &amp; INCOME DOCUMENTS</font></b>\n\nPAN AND ADHAR CARD\nCo-applicant Pan and adhar card\nPresent staying address proof\n6 Months pay slip\n1 year Bank statement\n2 years Form-16\nLogin Fees cheque\n\n<b><font color='#005CEE' size="16">☞ PROPERTY DOCUMENTS</font></b>\n\nAGREEMENT OF SALE\nSale deed\n15 years Link documents\nproperty tax receipts\nPLAN COPY\nEC</string>
    <string name="loanHomeSelfAEmployed"><b><font color='#005CEE' size="16">☞ PROPERITOR SHIP</font></b>\n\n1 PAN AND ADHAR CARD\n2 Co applicant Pan and adhar card\n3 present staying address proof\n4 Registration proof\n5 GST Reg proof (if available)\n6 Vintage proof\n7 Latest 3 years IT returns\n8 1 year bank statement of current and saving account\n\n<b><font color='#005CEE' size="16">☞ PROPERTY DOCUMENTS</font></b>\n\n1 Agreement of sale\n2 Sale deed\n3 15 years Link documents\n4 property tax receipts\n5 PLAN COPY\n6 EC</string>
    <string name="loanBusiness"><b><font color='#005CEE' size="16">☞ Proprietor ship</font></b>\n\n1. Pan card and Aadhar card of both Applicant and Co-applicant\n2. Present resident address proof of both Applicant and Co-applicant\n3. GST Registration copy or Labour license Vintage proof\n4. GST Returns one-year req\n5. Present office address proof\n6. Own Property proof ie (latest month electricity bill, property tax, sale deed )\n7. Latest 2 years ITR returns\n8. Latest one-year bank statement to till date in PDF format of all bank’s\n9. If any loanfinance’s track req\n10. pass port size photo of both Applicant and Co-applicant\n11. official mail id\n12. Two References personal references and Trade references\n\n<b><font color='#005CEE' size="16">☞ Partner ship firm</font></b>\n\n1. All Partners Pan card and Aadhar card\n2. All Partners Present resident address proof\n3. Company Pan card\n4. GST Registration copy\n5. Partnership deed\n6. Present office address proof\n7. Own Property proof ie (latest month electricity bill , property tax, sale deed )\n8. Latest 2 years ITR returns of company and individual\n9. Latest one-year bank statement to till date in PDF format of all bank’s\n10. All Partners pass port size photo\n11. Company mail id\n12. Two References personal references and Trade references\n\n13. If any loanfinance’s track req\n\n<b><font color='#005CEE' size="16">☞ Private Limited OR Limited</font></b>\n\n1. All Director’s Pan card and Aadhar card\n2. All Director’s Present resident address proof\n3. Company Pan card\n4. GST Registration copy\n5. incorporation certificate\n6. MOA and AOA\n7. Share holding pattern\n8. Present office address proof\n9. Own Property proof ie (latest month electricity bill , property tax, sale deed )\n10. Latest 2 years ITR returns of company and individual\n11. Latest one-year bank statement to till date in PDF format of all bank’s\n12. All Director pass port size photo\n13. Company mail id\n14. Two References personal references and Trade references\n15. If any loanfinance’s track req</string>
    <string name="loanMortigageSalaried"><b><font color='#005CEE' size="16">☞ PERSONAL &amp; INCOME DOCUMENTS\n\n</font></b>PAN AND ADHAR CARD\nCo-applicant Pan and adhar card\nPresent staying address proof\n6 Months pay slip\n1 year Bank statement\n2 years Form-16\nLogin Fees cheque\n\n<b><font color='#005CEE' size="16">☞ PROPERTY DOCUMENTS</font></b>\n\nSale deed\n15 years Link documents\nproperty tax receipts\nPLAN COPY\nEC</string>
    <string name="loanMortigageSelfAEmployed"><b><font color='#005CEE' size="16">☞ PROPERITOR SHIP</font></b>\n\n1 PAN AND ADHAR CARD\n2 Co applicant Pan and adhar card\n3 present staying address proof\n4 Registration proof\n5 GST Reg proof (if available)\n6 Vintage proof\n7 Latest 3 years IT returns\n8 1 year bank statement of current and saving account\n\n<b><font color='#005CEE' size="16">☞ PROPERTY DOCUMENTS</font></b>\n\n1 Sale deed\n2 15 years Link documents\n3 property tax receipts\n4 PLAN COPY\n5 EC</string>
    <string name="loanTransferMortigageSalaried"><b><font color='#005CEE' size="16">☞ PERSONAL &amp; INCOME DOCUMENTS</font></b>\n\n1 PAN AND ADHAR CARD\n2 Co-applicant Pan and adhar card\n3. PRESENT STAYING ADDRESS PROOF\n4 6 Months pay slip\n5 1 year Bank statement\n6 2 years Form-16\n7 Login Fees cheque\n\n<b><font color='#005CEE' size="16">☞ PROPERTY DOCUMENTS</font></b>\n\n1 Sale deed\n2 15 years Link documents\n3 property tax receipts\n4 PLAN COPY\n5 EC\n6 sanction Letter\n7 List of documents\n8 Outstanding letter\n9 Loan account statement</string>
    <string name="loanTransferMortigageSelfAEmployed"><b><font color='#005CEE' size="16">☞ PROPERITOR SHIP</font></b>\n\n1 PAN AND ADHAR CARD\n2 Co applicant Pan and adhar card\n3 present staying address proof\n4 Registration proof\n5 GST Reg proof (if available)\n6 Vintage proof\n7 Latest 3 years IT returns\n8 1 year bank statement of current and saving\naccount\n\n<b><font color='#005CEE' size="16">☞ PROPERTY DOCUMENTS</font></b>\n\n1 Sale deed\n2 15 years Link documents\n3 property tax receipts\n4 PLAN COPY\n5 EC\n6 sanction Letter\n7 List of documents\n8 Outstanding letter\n9 Loan account statement</string>
    <string name="loanTransferHomeSelfAEmployed"><b><font color='#005CEE' size="16">☞ PERSONAL &amp; INCOME DOCUMENTS</font></b>\n\n1 PAN AND ADHAR CARD\n2 Co applicant Pan and adhar card\n3 present staying address proof\n4 6 Months pay slip\n5 1 year Bank statement\n6 2 years Form-16\n7 Login Fees cheque\n\n<b><font color='#005CEE' size="16">☞ PROPERTY DOCUMENTS</font></b>\n\n1 Sale deed\n2 15 years Link documents\n3 property tax receipts\n4 PLAN COPY\n5 EC\n6 sanction Letter\n7 List of documents\n8 Outstanding letter\n9 Loan account statement</string>
    <string name="AadhaarQue1">An Aadhaar card loanfinance is a type of unsecured financing option provided by the banks to its customers. It requires minimum documentation as compared to traditional bank loans.  Aadhaar card  is a paperless e-KYC document that fulfills your eligibility criteria for biometric verification. It can be used for your ID proof and address proof.  You just need to submit your financial documents such as salary statements, PAN Card, bank statements for approval of your aadhaar loanfinance.</string>
    <string name="AadhaarQue2">A loanfinance can be used to meet any unfortunate circumstances such as – medical expenses, renovation of a house, child’s education or marriage expenditures, etc. If you are planning to apply for a aadhaar loanfinance, it’s compulsory to submit your Know Your Customer (KYC) documents. The government has made it mandatory for banks and financial institutions to collect KYC details from the applicants in order to prevent money laundering. Banks have started e-KYC which has made the process much easy and simple. Since Aadhaar contains biometric data of the individuals, verification process has become fast.\n\nEarlier, both private and public sector banks demanded several documents from the applicants in order to approve aadhaar loanfinance application. Hence, the time taken for approval was also long. However, ever since the Aadhaar cards have been introduced, lesser documents are required, and the time taken for the loanfinance approval has reduced.\n\n\t aadhaar loans are generally taken for emergency purposes such as medical expenses or for funding education, and Aadhaar makes the process quick.  aadhaar details of the individual are found in the Aadhaar database; therefore, the time taken to get the loanfinance approved is less.</string>
    <string name="LoanTypeTitle">Aadhaar Pe Loan Guide is an informative mobile application, where you can get the latest information about all aadhar card, take loan on aadhar card, and want to known many advantages about aadhar card at any time and place.</string>
    <string name="HomeLoan">Home Loan</string>
    <string name="BusinessLoan">Business Loan</string>
    <string name="GoldLoan">Gold Loan</string>
    <string name="EducationLoan">Education Loan</string>
    <string name="VehicleLoan">Vehicle Loan</string>
    <string name="loan_amount">Loan \nAmount</string>
    <string name="monthly_emi">Monthly\nEMI</string>
    <string name="total_interest">Total\nInterest</string>
    <string name="total_payment">Total\nPayment</string>
</resources>