<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoanUi.LoanActivity.GoActivity">

  <Button
      android:id="@+id/BtnGo"
      android:layout_width="@dimen/_120sdp"
      android:layout_height="wrap_content"
      android:text="@string/Lets_Go"
      android:layout_marginBottom="@dimen/_10sdp"
      android:background="@drawable/ic_button_view"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

  <TextView
      android:id="@+id/TvGetInstant"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/GetInstant"
      android:textSize="@dimen/_22sdp"
      android:textColor="@color/app_color"
      android:fontFamily="@font/main_bold"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@id/TvLoanApproval"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/TvLoanApproval"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/LoanApproval"
      android:textSize="@dimen/_18sdp"
      android:fontFamily="@font/main_semibold"
      android:layout_marginBottom="@dimen/_10sdp"
      app:layout_constraintBottom_toTopOf="@id/TvGoDec"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/TvGoDec"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/LoanGoDec"
      android:textSize="@dimen/_12sdp"
      android:gravity="center"
      android:fontFamily="@font/main_medium"
      android:layout_marginBottom="@dimen/_10sdp"
      app:layout_constraintBottom_toTopOf="@id/BtnGo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>