<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoanUi.LoanActivity.Calculators.LoanEMICalculatorActivity">

    <RelativeLayout
        android:id="@+id/RlHeaderBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/layout_topbar" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RlHeaderBar">

        <TextView
            android:id="@+id/TvLoanAmountBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_tab_view"
            android:gravity="center"
            android:padding="8dp"
            android:fontFamily="@font/main_semibold"
            android:text="@string/loan_amount"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/TvMonthlyEMIBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TvMonthlyEMIBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_tab_view_unselected"
            android:gravity="center"
            android:padding="8dp"
            android:fontFamily="@font/main_semibold"
            android:text="@string/monthly_emi"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/TvLoanAmountBtn"
            app:layout_constraintEnd_toStartOf="@+id/TvTotalInterestBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/TvLoanAmountBtn"
            app:layout_constraintTop_toTopOf="@+id/TvLoanAmountBtn" />

        <TextView
            android:id="@+id/TvTotalInterestBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_tab_view_unselected"
            android:gravity="center"
            android:padding="8dp"
            android:fontFamily="@font/main_semibold"
            android:text="@string/total_interest"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/TvMonthlyEMIBtn"
            app:layout_constraintEnd_toStartOf="@+id/TvTotalPaymentBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/TvMonthlyEMIBtn"
            app:layout_constraintTop_toTopOf="@+id/TvMonthlyEMIBtn" />

        <TextView
            android:id="@+id/TvTotalPaymentBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_tab_view_unselected"
            android:gravity="center"
            android:padding="8dp"
            android:fontFamily="@font/main_semibold"
            android:text="@string/total_payment"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/TvTotalInterestBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/TvTotalInterestBtn"
            app:layout_constraintTop_toTopOf="@+id/TvTotalInterestBtn" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/ViewPagerEMI"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TvLoanAmountBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>